--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
-<title>Home - Shopme Admin</title>
+<title th:text="${pageTitle}"></title>
 
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
@@ -59,10 +59,10 @@
 			</nav>
 		</div>
 		<div>
-			<h2>Manage Users | Create New User</h2>
+			<h2>Manage Users | <span th:text="${pageTitle}"></span></h2>
 		</div>
 			<form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto"
-			th:object="${user}">
+			th:object="${user}" onsubmit="return checkEmailUnique(this);">
 				<div class="border border-secondary rounded p-3">
 					<div class="form-group row">
 						<label class="col-sm-4 col-form-label">E-mail : </label>
@@ -121,7 +121,44 @@
 					</div>
 				</div>
 			</form>
+
+		<div class="modal fade text-center" id="modalDialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h4 class="model-title" id="modalTitle">Warning</h4>
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+					</div>
+					<div class="modal-body">
+						<span id="modalBody"></span>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
+
+	<script type="text/javascript">
+   function checkEmailUnique(form) {
+      url = "[[@{/users/check_email}]]";
+      userEmail = $("#email").val();
+      csrfValue = $("input[name='_csrf']").val();
+      console.log(userEmail);
+      params = {email: userEmail, _csrf: csrfValue};
+
+      $.post(url, params, function(response) {
+      	if(response == "OK"){
+      		form.submit();
+      	} else if (response == "Duplicate") {
+         	alert("User is already present : " + userEmail);
+        }
+      });
+      return false;
+   }
+</script>
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
