--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -6,6 +6,7 @@
 <title>Home - Shopme Admin</title>
 
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+	<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
@@ -82,13 +83,22 @@
 				<tbody>
 					<tr th:each="user : ${listUsers}">
 						<td th:text="${user.id}"></td>
-						<td></td>
+						<td><i class="las la-portrait la-3x "></i></td>
 						<td th:text="${user.email}"></td>
 						<td th:text="${user.firstName}"></td>
 						<td th:text="${user.lastName}"></td>
 						<td th:text="${user.roles}"></td>
-						<td th:text="${user.enabled}"></td>
-						<td>Edit | Delete</td>
+						<td>
+							<a th:if="${user.enabled} == true" class="las la-check-circle la-2x" href=""
+							   style="text-decoration: none; color:green;"></a>
+							<a th:if="${user.enabled} == false" class="las la-check-circle la-2x" href=""
+							   style="text-decoration: none; color:grey;"></a>
+						</td>
+						<td>
+							<a class="las la-edit la-2x" th:href="@{'/user/edit/' + ${user.id}}" title="Edit the user"
+							   style="text-decoration: none; color:green;"></a>
+							<a class="las la-trash la-2x" href="" style="text-decoration: none;"></a>
+						</td>
 					</tr>
 				</tbody>
 			</table>
