--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -89,20 +89,42 @@
 						<td th:text="${user.lastName}"></td>
 						<td th:text="${user.roles}"></td>
 						<td>
-							<a th:if="${user.enabled} == true" class="las la-check-circle la-2x" href=""
+							<a th:if="${user.enabled} == true" class="las la-check-circle la-2x"
+							   th:href="@{'/user/enable/' + ${user.id} +'/enabled/false'}"
 							   style="text-decoration: none; color:green;"></a>
-							<a th:if="${user.enabled} == false" class="las la-check-circle la-2x" href=""
+							<a th:if="${user.enabled} == false" class="las la-check-circle la-2x"
+							   th:href="@{'/user/enable/' + ${user.id} +'/enabled/true'}"
 							   style="text-decoration: none; color:grey;"></a>
 						</td>
 						<td>
 							<a class="las la-edit la-2x" th:href="@{'/user/edit/' + ${user.id}}" title="Edit the user"
 							   style="text-decoration: none; color:green;"></a>
-							<a class="las la-trash la-2x link-delete" th:href="@{'/user/delete/' + ${user.id}}"
-							   title= "Delete this user" style="text-decoration: none;"></a>
+							<a class="las la-trash la-2x link-delete"
+							   th:href="@{'/user/delete/' + ${user.id}}"
+							   th:userId="${user.id}"
+							   title= "Delete this user"
+							   style="text-decoration: none;"></a>
 						</td>
 					</tr>
 				</tbody>
 			</table>
+		</div>
+		<div class="modal fade text-center" id="confirmModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h4 class="model-title">Delete Confirmation</h4>
+						<button type="button" class="close" data-dismiss="modal">&times</button>
+					</div>
+					<div class="modal-body">
+						<span id="confirmText">Are you sure want to delete this user.</span>
+					</div>
+					<div class="modal-footer">
+						<a class="btn btn-success" href="" id="yesButton">Yes</a>
+						<button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
@@ -111,6 +133,16 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script type="text/javascript">
 console.log('hello javed');
+$(document).ready(function() {
+	$(".link-delete").on("click", function(e) {
+		e.preventDefault();
+		link = $(this);
+		userId = link.attr("userId");
+		$("#yesButton").attr("href", link.attr("href"));
+		$("#confirmText").text("Are you sure want to delete this user." + userId);
+		$("#confirmModal").modal();
+	});
+});
 </script>
 
 </body>
