--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
@@ -68,6 +68,8 @@
 						<label class="col-sm-4 col-form-label">E-mail : </label>
 						<div class="col-sm-8">
 							<input type="email" class="form-control" th:field="*{email}" required minlength="8" maxlength="128"/>
+							<p th:errors = "*{email}" class="text-danger"
+							   th:if="${#fields.hasErrors('email')}"></p>
 						</div>
 					</div>
 					<br>
