--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
@@ -62,6 +62,7 @@
 			<h2>Manage Users | <span th:text="${pageTitle}"></span></h2>
 		</div>
 			<form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto"
+				  enctype="multipart/form-data"
 			th:object="${user}" onsubmit="return checkEmailUnique(this);">
 				<div class="border border-secondary rounded p-3">
 					<div class="form-group row">
@@ -115,6 +116,16 @@
 						</div>
 					</div>
 
+					<div class="form-group row">
+						<label class="col-sm-4 col-form-label">Photos: </label>
+						<div class="col-sm-8">
+							<input type="file" id="fileImage" name="image" accept="image/png, image/jpeg"
+							class="mb-2"/>
+							<img id="thumbnail" alt="photo preview" th:src="@{${user.photoImagePath}}"
+							class="img-fluid"/>
+						</div>
+					</div>
+
 					<div class="text-center">
 						<input type="submit" value="Save" class="btn btn-primary m-3"/>
 						<a th:href="@{/users}">
@@ -144,6 +155,33 @@
 	</div>
 
 	<script type="text/javascript">
+
+	$(document).ready(function() {
+		$("$buttonCancel").on("click", function() {
+			window.location = "[[@{/users}]]";
+		});
+		$(#fileImage).change(function(){
+			fileSize = this.files[0].size;
+			alert("File size : " + fileSize);
+
+			if(fileSize > 1048576){
+				this.setCustomValidity("photo size less than 1 MB");
+				this.reportValidity();
+			}else{
+				this.setCustomValidity("");
+				showImageThumbnail(this);
+			}
+		});
+	});
+
+	function showImageThumbnail(fileInput){
+		var file = fileInput.files[0];
+		var reader = new FileReader();
+		reader.onload = function(e) {
+			$("$thumbnail").attr("src", e.target.result);
+		};
+	}
+
    function checkEmailUnique(form) {
       url = "[[@{/users/check_email}]]";
       userEmail = $("#email").val();
