--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -83,7 +83,10 @@
 				<tbody>
 					<tr th:each="user : ${listUsers}">
 						<td th:text="${user.id}"></td>
-						<td><i class="las la-portrait la-3x "></i></td>
+						<td>
+							<span th:if="${user.photo == null}" class="las la-portrait la-3x "></span>
+							<img th:if="${user.photo != null}" th:src="@{${user.photoImagePath}}"/>
+						</td>
 						<td th:text="${user.email}"></td>
 						<td th:text="${user.firstName}"></td>
 						<td th:text="${user.lastName}"></td>
