added search filter to user list

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -67,16 +67,29 @@
 		<div class ="alert alert-success text-center" th:if="${message != null}" th:text="${message}"></div>
 
 		<div>
+			<form th:action="@{/users/page/1}" class="form-inline m-3">
+				<input type="hidden" name="sortField" th:value="${sortField}">
+				<input type="hidden" name="sortDir" th:value="${sortDir}">
+				Filter: &nbsp;
+				<input type="search" name="keyword" th:value="${keyWord}" class="form-control" required/>
+				&nbsp;&nbsp;
+				<input type="submit" value="search" class="btn btn-primary"/>
+				&nbsp;&nbsp;
+				<input type="button" value="clear" class="btn btn-secondary" onclick="clearFilter()"/>
+			</form>
+		</div>
+
+		<div>
 			<table class="table table-bordered table-striped table-hover table-responsive-xl">
 				<thead class="thead-dark">
 				<tr>
 					<th>
 						<a th:if="${sortField != 'id'}" style="text-decoration: none;"
-						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${sortDir}}">
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
 							User Id
 						</a>
 						<a th:if="${sortField == 'id'}" style="text-decoration: none;"
-						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${reverseSortDir}}">
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
 							User Id
 						</a>
 						<span th:if="${sortField == 'id'}"
@@ -85,11 +98,11 @@
 					<th>Photos</th>
 					<th>
 						<a th:if="${sortField != 'email'}" style="text-decoration: none;"
-						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${sortDir}}">
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
 							Email
 						</a>
 						<a th:if="${sortField == 'email'}" style="text-decoration: none;"
-						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
 							Email
 						</a>
 						<span th:if="${sortField == 'email'}"
@@ -97,11 +110,11 @@
 					</th>
 					<th>
 						<a th:if="${sortField != 'firstName'}" style="text-decoration: none;"
-						th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${sortDir}}">
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
 							First Name
 						</a>
 						<a th:if="${sortField == 'firstName'}" style="text-decoration: none;"
-						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
 							First Name
 						</a>
 						<span th:if="${sortField == 'firstName'}"
@@ -109,11 +122,11 @@
 					</th>
 					<th>
 						<a th:if="${sortField != 'lastName'}" style="text-decoration: none;"
-						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${sortDir}}">
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
 							Last Name
 						</a>
 						<a th:if="${sortField == 'lastName'}" style="text-decoration: none;"
-						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
 							Last Name
 						</a>
 						<span th:if="${sortField == 'lastName'}"
@@ -122,11 +135,11 @@
 					<th>Roles</th>
 					<th>
 						<a th:if="${sortField != 'enabled'}" style="text-decoration: none;"
-						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDir=' + ${sortDir}}">
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
 							Enabled
 						</a>
 						<a th:if="${sortField == 'enabled'}" style="text-decoration: none;"
-						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDir=' + ${reverseSortDir}}">
+						   th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDir=' + ${reverseSortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
 							Enabled
 						</a>
 						<span th:if="${sortField == 'enabled'}"
@@ -175,7 +188,7 @@
 			<span>No users found</span>
 		</div>
 
-		<div>
+		<div th:if="${totalPages > 1}">
 			<nav>
 				<ul class="pagination justify-content-center">
 					<li th:class="${currentPage > 1 ? 'page-item': 'page-item disabled'}">
@@ -231,6 +244,10 @@ $(document).ready(function() {
 		$("#confirmModal").modal();
 	});
 });
+
+function clearFilter(){
+window.location = "[[@{/users}]]";
+}
 </script>
 
 </body>
