--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -62,6 +62,8 @@
 		<div>
 			<h2>Manage Users</h2>
 			<a th:href="@{/users/new}">Create New User</a>
+			&nbsp;|&nbsp;
+			<a th:href="@{/users/export/csv}">Export to CSV</a>
 		</div>
 
 		<div class ="alert alert-success text-center" th:if="${message != null}" th:text="${message}"></div>
