--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -64,6 +64,8 @@
 			<a th:href="@{/users/new}">Create New User</a>
 			&nbsp;|&nbsp;
 			<a th:href="@{/users/export/csv}">Export to CSV</a>
+			&nbsp;|&nbsp;
+			<a th:href="@{/users/export/excel}">Export to Excel</a>
 		</div>
 
 		<div class ="alert alert-success text-center" th:if="${message != null}" th:text="${message}"></div>
